# PlanetDebug

./: .gitignore  LICENSE  README.md
Go2Cloud/: CMakeLists.txt  G2C_environment_monitor-manifest.json  README.md  compile_commands.json  main.c
Practica_1_Blink_LED/: CMakeLists.txt  compile_commands.json  main.c
Practica_2_PORT/: CMakeLists.txt  compile_commands.json  main.c
Practica_3_Package_Manager/: CMakeLists.txt  compile_commands.json  main.c
Practica_4_GUI/: CMakeLists.txt  compile_commands.json  main.c  main_screen.c  main_screen.h  main_screen.mscr  resource.mres
UART_Printf/: CMakeLists.txt  compile_commands.json  main.c  printf.c  printf.h
